--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
   "author": "Agrilo Team",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
+    "@google/earthengine": "^1.7.4",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -37,6 +39,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "form-data": "^4.0.4",
+    "google-auth-library": "^10.5.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
@@ -48,12 +51,12 @@
     "sharp": "^0.32.6"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "supertest": "^6.3.3",
     "mongodb-memory-server": "^9.1.3",
-    "@jest/globals": "^29.7.0"
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
