--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-media-recorder": "^1.7.2",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.7.1",
     "workbox-window": "^7.3.0"
